add 知乎 烟斗狼（难得的明白人），颗粒化，真的准确。

--- a/语录/51-60/3.md
+++ b/语录/51-60/3.md
@@ -1,2 +1,3 @@
 1. It's ok to get punishment for your sin than to hide it with greater sin . 
 2. The saddest truth about life is that people only like you for what you have, not for who you are. 
+3. 这不是一个能出振聋发聩声音的时代了。每个人被鼓励或被逼使去过一种营营苟苟的生活，就算是曾经呐喊过”振兴中华匹夫有责“的八十年代新一辈，大多也忙于经营自己的一亩三分地，过着”老婆孩子热炕头“的世俗生活。的确，与前辈比起来，这个民族正在迅速俗化，迅速颗粒化（atomized)。 ————知乎，烟斗狼。
